# substrate-template-generator

./: .gitignore  Cargo.toml  NOTES.md  README.md
config/: canvas.toml  cumulus.toml  frontier.toml  substrate.toml  test.toml
src/: main.rs
