[package]
name = "substrate-node-template-generator"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
toml = "0.5.4"
tar = "0.4"
glob = "0.2"
structopt = "0.3"
tempfile = "3"
fs_extra = "1"
git2 = "0.8"
flate2 = "1.0"

[workspace]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
