[package]
name = "substrate-node-template-generator"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "GPL-3.0"

[dependencies]
toml = "0.5.4"
tar = "0.4"
glob = "0.2"
clap = { version = "3.0", features = ["derive"] }
fs_extra = "1"
git2 = "0.16"
serde = { version = "1.0.136", features = ["derive"] }

[workspace]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
